<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.secundario.DonacionesFragment"
    android:background="@color/colorWhite">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/imageView6"
                            android:layout_width="75dp"
                            android:layout_height="75dp"
                            android:src="@drawable/imim" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="5dp"
                            android:gravity="center"
                            android:orientation="vertical">

                                <TextView
                                    android:id="@+id/textView2"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="left"
                                    android:layout_marginBottom="-5dp"
                                    android:gravity="center_vertical"
                                    android:text="@string/instituto"
                                    android:textColor="@color/colorGris"
                                    android:textSize="30sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:id="@+id/textView4"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:gravity="center_vertical"
                                    android:layout_gravity="left"
                                    android:text="@string/misionero"
                                    android:textColor="@color/colorRed"
                                    android:textSize="31sp"
                                    android:textStyle="bold" />
                        </LinearLayout>

                </LinearLayout>

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:gravity="center"
                    android:text="@string/ver1"
                    android:textColor="@color/colorBlack" />

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/ver2"
                    android:textColor="@color/colorBlack" />

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/ver3"
                    android:textColor="@color/colorBlack" />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/ver4"
                    android:textColor="@color/colorBlack" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:gravity="center"
                    android:text="@string/ver5"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="17dp"
                    android:gravity="center"
                    android:text="@string/pasos"
                    android:textColor="@color/colorBlack"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textview20"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="12dp"
                    android:gravity="center"
                    android:text="@string/paso1"
                    android:textColor="@color/colorBlack" />

                <TextView
                    android:id="@+id/linkpago"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:gravity="center"
                    android:linksClickable="true"
                    android:text="@string/link_pago"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/paso2"
                    android:textColor="@color/colorBlack" />

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/paso2.1"
                    android:textColor="@color/colorBlack"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/paso3"
                    android:textColor="@color/colorBlack" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/paso3.1"
                    android:textColor="@color/colorBlack"
                    android:textStyle="italic" />

        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>