<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by Nicanor Orlando.
  ~ Copyright (c) 7/12/21 09:33.
  ~ All rights reserved.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".loginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/im2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/imim" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/instituto"
                android:textColor="@color/colorGris"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/misionero"
                android:textColor="@color/colorRed"
                android:textSize="30sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/iniciar_sesion_text"
            android:textColor="@color/colorBlack"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/btnGoogle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/btnGoogle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:background="@drawable/btn"
            android:drawablePadding="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="65dp"
            android:text="Continuar con Google"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textColor="@color/colorBlack"
            app:drawableLeftCompat="@drawable/ic_google" />

        <TextView
            android:id="@+id/omitir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/omitir_inicio"
            android:textColor="#003399"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnGoogle"
            app:layout_constraintVertical_bias="0.078" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
